Long whitespace display of the gallery slider images issue fixed

--- a/style.css
+++ b/style.css
@@ -1895,6 +1895,7 @@ li.comments-tab-widget p {
 --------------------------------------------------------------*/
 .gallery-slider {
     visibility: hidden;
+    height: 0;
 }
 
 .format-gallery .bx-wrapper {
